# webhook-listener-bot-template

./: .env.template  Cargo.toml  Dockerfile  LICENSE  README.md
.do/: app_spec.yaml  deploy.template.yaml
src/: combined_bot.rs  lib.rs  webhook_listener_bot.rs
src/controllers/: app_state.rs  mod.rs  webhook_handler_controller.rs
src/db/postgres/migrations/: 0008_token_prices.down.sql  0008_token_prices.up.sql  0011_create_invoice.up.sql  0012_create_payment.up.sql  0015_token_symbols.down.sql  0015_token_symbols.up.sql  0201_provider_api_key.up.sql
src/db/postgres/models/: events_model.rs  mod.rs  payments_model.rs  premium_subscription_model.rs  webhook_triggers_model.rs
src/db/postgres/scripts/: migrate.rs  rollback_full.rs
src/types/: defi_relay_webhook_payload.rs  mod.rs  unix_day_index.rs
src/types/domains/: bytes.rs  bytes32.rs  datetime.rs  eth_address.rs  h256.rs  id.rs  json.rs  mod.rs  pay_to_amounts.rs  pay_to_array.rs  uint256.rs
src/util/: mod.rs
src/utils/: built_from_db_row.rs  request.rs
