[package]
name = "defi-relay-webhook-listener-bot"
version = "0.1.1"
edition = "2021"
  
default-run = "webhook_listener_bot"
description = "Handles payment events that are emitted by defi relay"
license = "MIT"




[dependencies]


 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0.96"
tokio-postgres-migration = "0.1.0"
tokio-postgres = { version = "0.7.8" ,  features=["with-chrono-0_4"] } 
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros"] }


actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-multipart = "0.6.1"


dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.18"


ethers = "2.0.10"
thiserror = "1.0.49"
include_dir = "0.7.3"
inquire = "0.6.2"

  

rust_decimal = { version = "1.33.1", features = ["db-tokio-postgres","maths"] }  

 degen-sql = { version = "0.2.5", features = ["utoipa-schema"] }
 

reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
url = "2.5.4"
futures = "0.3.31"
chrono =  { version = "0.4.39", features = [ "serde" ] }
ethers-middleware = "2.0.14"
bytes = "1.10.0"
utoipa = "5.3.1"




[[bin]]
name = "migrate"
path = "src/db/postgres/scripts/migrate.rs"

[[bin]]
name = "rollback_full"
path = "src/db/postgres/scripts/rollback_full.rs"
 
 




[[bin]]
name = "webhook_listener_bot"
path = "src/webhook_listener_bot.rs"

 
 
 
